--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -1,94 +1,124 @@
 *,
 *::after,
 *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-    color: inherit;
-    font-family: inherit;
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+  color: inherit;
+  font-family: inherit;
 }
 
-html, body {
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 html {
-    font-size: 65.5%;
+  font-size: 65.5%;
 }
 
 @media only screen and (max-width: 1460px) {
-    html {
-        font-size: 50.5%;
-    }
+  html {
+    font-size: 50.5%;
+  }
 }
 
 @media only screen and (max-width: 1240px) {
-    html {
-        font-size: 50.5%;
-    }
+  html {
+    font-size: 50.5%;
+  }
 }
 
 @media only screen and (max-width: 900px) {
-    html {
-        font-size: 40.5%;
-    }
+  html {
+    font-size: 40.5%;
+  }
 }
 
 @media only screen and (max-width: 600px) {
-    html {
-        font-size: 35.5%;
-    }
+  html {
+    font-size: 35.5%;
+  }
 }
 
 body {
-    box-sizing: border-box;
-    font-family: IRANSans, sans-serif;
-    direction: rtl;
-    text-align: right;
+  box-sizing: border-box;
+  font-family: IRANSans, sans-serif;
+  direction: rtl;
+  text-align: right;
 }
 
 p {
-    font-size: 2rem;
-    margin-bottom: 0;
+  font-size: 2rem;
+  margin-bottom: 0;
 }
 
 a {
-    color: $color_white !important;
-    &:hover {
-        cursor: pointer;
-    }
-    &>p {
-        color: $color-white;
-    }
+  color: $color_white !important;
+  &:hover {
+    cursor: pointer;
+  }
+  & > p {
+    color: $color-white;
+  }
 }
 
 button {
-    border: none;
-    background: none;
-    font-size: 2rem;
-    &:hover {
-        cursor: pointer;
-    }
-    &:focus {
-        outline: none;
-    }
+  border: none;
+  background: none;
+  font-size: 2rem;
+  &:hover {
+    cursor: pointer;
+  }
+  &:focus {
+    outline: none;
+  }
 }
 
-input, textarea {
-    padding: .5rem 2rem;
-    font-size: 2rem;
-    border: 1px solid $color_border;
+input,
+textarea {
+  padding: 0.5rem 2rem;
+  font-size: 2rem;
+  border: 1px solid $color_border;
 
-    @include round(20);
-    &:focus {
-        outline: none;
-    }
+  @include round(20);
+  &:focus {
+    outline: none;
+  }
 }
 
 textarea {
-    padding: 2rem;
+  padding: 2rem;
 }
 
 section {
-    width: 100%;
+  width: 100%;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(87, 167, 216);
+  background: linear-gradient(
+    0deg,
+    rgba(87, 167, 216, 1) 25%,
+    rgba(125, 243, 248, 0.6923144257703081) 100%
+  );
+  border-radius: 10px;
+  border: .1rem solid #707070;
+}
+
+// ::-webkit-scrollbar-track-piece {
+//     background-image: url("https://i.imgur.com/GvV1R30.png");
+//     background-repeat: repeat-y;
+//     background-size: contain;
+// }
